# wagtail-personalisation

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CHANGES  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  README.rst  manage.py  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini  users.json  webpack.config.js
.github/: report_nightly_build_failure.py
.github/workflows/: nightly-tests.yml  publish.yml  python-test.yml
.tx/: config
docs/: Makefile  blogpost.rst  conf.py  default_rules.rst  getting_started.rst  implementation.rst  index.rst  make.bat  usage_guide.rst
docs/editor_guide/: creating_personalised_content.rst  creating_personalized_content.rst  creating_segments.rst  default_rules.rst  index.rst  introduction.rst  segments_dashboard.rst
docs/getting_started/: index.rst  installation.rst  sandbox.rst
docs/usage_guide/: custom_rules.rst  implementation.rst  index.rst
frontend/js/: dashboard.js  form.js
frontend/scss/: dashboard.scss  form.scss  index.scss
sandbox/: manage.py  requirements.txt
sandbox/exampledata/: personalisation.json  users.json
sandbox/sandbox/: settings.py  urls.py  wsgi.py
sandbox/sandbox/templates/: base.html
src/personalisation/: adapters.py  admin.py  admin_urls.py  app_settings.py  blocks.py  edit_handlers.py  forms.py  middleware.py  models.py  rules.py  utils.py  views.py  wagtail_hooks.py
src/personalisation/migrations/: 0001_initial.py  0002_abstractbaserule_timerule.py  0002_abstractrulebase_timerule.py  0002_auto_20161205_1623.py  0002_auto_20161206_0938.py  0003_abstractbaserule_segment.py  0003_abstractrulebase_segment.py  0003_auto_20161206_1005.py  0004_segment_persistent.py  0004_segment_status.py  0005_cloudfrontdevicetyperule.py  0005_referralrule.py  0005_userisloggedinrule.py  0006_abstractbaserule_polymorphic_ctype.py  0006_segment_match_any.py  0006_visitcountrule.py  0007_auto_20161108_1610.py  0007_dayrule.py  0008_auto_20161108_1621.py  0008_devicerule.py  0009_auto_20161108_1731.py  0010_remove_abstractbaserule_name.py  (+21 more)
src/wagtail_personalisation/: __init__.py  adapters.py  admin.py  admin_urls.py  app_settings.py  blocks.py  config.py  forms.py  models.py  receivers.py  rules.py  utils.py  views.py  wagtail_hooks.py
tests/: conftest.py  fixtures.py  settings.py  test_models.py  utils.py
tests/factories/: page.py  rule.py  segment.py  site.py
tests/sandbox/: settings.py  urls.py
tests/site/: urls.py
tests/unit/: test_adapter_session.py  test_blocks.py  test_factories.py  test_hooks.py  test_middleware.py  test_models.py  test_regressions.py  test_rules_country_origin.py  test_rules_day.py  test_rules_device.py  test_rules_mixed.py  test_rules_query.py  test_rules_referral.py  test_rules_time.py  test_rules_visitcount.py  test_static_dynamic_segments.py  test_templatetags.py  test_utils.py  test_views.py  test_visit_page_view.py  test_wagtail_hooks.py
(+114 files in other folders)
